Improved folder table formatting